<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_screen_bg"
    android:orientation="vertical"
    tools:context="com.androidstuff.fenaapp.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/sampling"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/radiotype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioretailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#144ea2"
                android:buttonTint="#144ea2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retailer"
                android:textColor="#144ea2" />

            <RadioButton
                android:id="@+id/radiohousehold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#144ea2"
                android:buttonTint="#144ea2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/household"
                android:textColor="#144ea2" />

        </RadioGroup>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/language"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/radiolanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiorehindi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#144ea2"
                android:buttonTint="#144ea2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:textColor="#144ea2" />

            <RadioButton
                android:id="@+id/radioenglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:backgroundTint="#144ea2"
                android:buttonTint="#144ea2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="#144ea2" />

        </RadioGroup>

    </LinearLayout>


    <EditText
        android:id="@+id/et_retailercode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_border"
        android:hint="@string/discode"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="#144ea2" />


    <Button
        android:id="@+id/btn_logincontinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounder_corner"
        android:padding="15dp"
        android:text="@string/continu"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />


</LinearLayout>
