<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androidstuff.fenaapp.ConsumerDetailsForm">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#144ea2"
        app:title="Consumer Details Form"
        app:theme="@style/ToolbarStyle"
        app:titleTextColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

   <EditText
       android:id="@+id/et_consumername"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:hint="@string/name"
       android:drawableLeft="@drawable/user_icon"
       android:drawablePadding="10dp"
       android:paddingBottom="15dp"
       android:textSize="14sp"
       android:textColor="@android:color/black" />



        <EditText
            android:id="@+id/et_consumeremail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
       android:hint="@string/email"
            android:drawableLeft="@drawable/address_book"
            android:drawablePadding="10dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            />


        <EditText
            android:id="@+id/et_consumernum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:hint="@string/num"
            android:drawableLeft="@drawable/contact_no"
            android:drawablePadding="10dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            />


        <EditText
            android:id="@+id/et_consumerdisname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/disname"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="10dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/et_consumeragencyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agencyname"
            android:drawableLeft="@drawable/agency"
            android:drawablePadding="10dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            />


<Button
    android:id="@+id/btn_consumerdetsubmit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounder_corner"
    android:layout_marginTop="40dp"
    android:text="@string/submit"
    android:padding="15dp"
    android:textAppearance="?android:textAppearanceMedium"
    android:textAllCaps="true"
    android:textColor="@android:color/white" />


    </LinearLayout>
    </ScrollView>
</LinearLayout>
