<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    android:textColor="@color/blue"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/tv_datelist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11 june 18"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textAllCaps="true"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:text="@string/name"
                    android:textSize="12sp"
                    android:textColor="@color/blue"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/tv_namelist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mohit Raina"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"

                    android:textColor="#000000"
                    android:textAllCaps="true"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/town"
                    android:textSize="12sp"
                    android:textColor="@color/blue"
                    android:textAllCaps="true"/>

                <TextView
                    android:id="@+id/tv_addlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Noida sec 16"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:textAllCaps="true"/>
            </LinearLayout>



            <ImageView
                android:id="@+id/iv_editlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete"
                android:layout_weight="0.5"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/iv_deletelist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete"
                android:layout_weight="0.5"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center" />




        </LinearLayout>

<TextView
    android:id="@+id/tv_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"/>


    </android.support.v7.widget.CardView>

</LinearLayout>
